--- a/src/global.less
+++ b/src/global.less
@@ -1,3 +1,219 @@
 @import 'src/utils/infoWin_style_global.less';
-@name: windy-plugin-demo;
+@name: windy-plugin-day-night;
 
+@darkorange: #d49500;
+@yellow: #fff3e1;
+@red: rgba(157, 3, 0, 1);
+@lRed: #946051; //actually brown
+@white: #f8f8f8; //rgba(248,248,248,1)
+
+.bg-gray {
+    background-color: rgba(77, 77, 77, 1);
+}
+
+@grayBg: rgba(77, 77, 77, 1);
+@black: rgba(0, 0, 0, 1);
+@grayFont: #6b6b6b;
+
+#@{name}-info {
+    .plugin__title {
+        margin-bottom: 15px;
+        padding-left: 5px;
+    }
+
+    .flex-container {
+        //padding        : 5px 0 5px 5px;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+
+        .scrollable {
+            flex: auto;
+            padding-left: 8px;
+            padding-bottom: 15px;
+
+            .add-scroll-bar();
+
+            .section {
+                margin-left: 10px;
+                color: rgba(250, 250, 250, 0.9);
+            }
+
+            .toggle-section {
+                margin-top: 10px;
+                margin-bottom: 10px;
+                display: block;
+                color: @yellow;
+                font-size: 1.5em;
+
+                &.checkbox {
+                    &::before {
+                        display: relative;
+                        content: '\u25B7';
+                        top: -0.1em;
+                        font-size: 13px;
+                        margin-right: 10px;
+                    }
+
+                    & + * {
+                        display: none;
+                    }
+
+                    &.off {
+                        &::before {
+                            content: '\u25BD';
+                        }
+
+                        & + * {
+                            display: block;
+                        }
+                    }
+                }
+
+                & + .tz-section {
+                    height: 125px;
+                    transition: height 0.5s;
+                    position: relative;
+                    overflow-y: hidden;
+
+                    &.collapsed {
+                        height: 70px;
+                    }
+
+                    &.hide-rows {
+                        .hideable {
+                            display: none;
+                        }
+                    }
+                }
+            }
+
+            table {
+                width: 100%;
+                border-collapse: separate;
+                border-spacing: 5px 3px;
+                .comment {
+                    font-size: 10px;
+                    font-style: italic;
+                }
+
+                tr {
+                    height: 15px;
+                    display: table-row;
+                }
+            }
+
+            td {
+                text-align: left;
+
+                &.select-setting {
+                    text-align: center;
+                    border: 1px solid rgba(255, 255, 255, 0.3);
+                    background-color: rgba(0, 0, 0, 0.2);
+                    border-radius: 11px;
+                    height: 22px;
+                    cursor: pointer;
+
+                    &.selected {
+                        border-color: @lRed;
+                        background-color: @lRed;
+                    }
+
+                    &:hover {
+                        background-color: white;
+                        color: #946051;
+                    }
+
+                    &.close {
+                        background-color: @red;
+                        top: 30px;
+
+                        &:hover {
+                            background-color: black;
+                        }
+                    }
+                }
+            }
+
+            #day-night-sun-table {
+                td {
+                    vertical-align: bottom;
+
+                    .checkbox::before {
+                        line-height: 10px;
+                    }
+                }
+            }
+
+            #day-night-tz-detail {
+                td:first-child {
+                    width: 25%;
+                }
+
+                td.small {
+                    font-size: 10px;
+                }
+            }
+
+            [data-ref='dayNightTimesTable'] {
+                .selected:not(span) {
+                    //color      : black;
+                    font-weight: bold;
+                    font-size: 1.05em;
+                }
+
+                td {
+                    cursor: pointer;
+
+                    &:nth-child(odd) {
+                        width: 35%;
+                    }
+
+                    &:nth-child(even) {
+                        width: 15%;
+                    }
+                }
+            }
+
+            [data-ref='dayNightSettings'] {
+                /*
+                td:nth-child(1) {
+                    min-width: 35%;
+                }
+
+                td:nth-child(2) {
+                    min-width: 35%;
+                }
+
+                td:nth-child(3) {
+                    min-width: 35%;
+                */
+
+                table-layout: fixed;
+            }
+
+            input[type='range'] {
+                width: 100%;
+                height: 20px;
+                background-color: rgba(0, 0, 0, 0.1);
+                border: 1px solid rgba(255, 255, 255, 0.3);
+                border-radius: 20px;
+                margin: 0.1em 0;
+
+                &::-webkit-slider-runnable-track {
+                    background-color: transparent;
+                }
+            }
+
+            .hidden {
+                display: none;
+            }
+            [data-ref^='valFullyear'] {
+                max-width: 3em;
+                min-width: 3em;
+                overflow: hidden;
+                white-space: nowrap;
+            }
+        }
+    }
+}
