changed name of daynight

--- a/src/daynight.less
+++ b/src/daynight.less
@@ -1,6 +1,6 @@
 @import 'utils/infoWin_style_svelte.less';
 
-@name: windy-plugin-day-night;
+@name: windy-plugin-daynight;
 @width: 350px;
 @bottom: 150px;
 
