--- a/src/daynight.less
+++ b/src/daynight.less
@@ -4,7 +4,7 @@
 @width: 350px;
 @bottom: 150px;
 
-#@{name}-info {
+//#@{name}-info {
     //padding: 0px;  // if using flex-container,  use padding 0,  because pading in this container.
     //background-color: rgba(0,0,0,0.7);
-}
+//}
