--- a/src/global.less
+++ b/src/global.less
@@ -1,5 +1,5 @@
 @import 'src/utils/infoWin_style_global.less';
-@name: windy-plugin-daynight;
+@name: windy-plugin-day-night;
 
 @darkorange: #d49500;
 @yellow: #fff3e1;
