fix mobile small pointerevents

--- a/src/global.less
+++ b/src/global.less
@@ -48,7 +48,7 @@
 
                 &.checkbox {
                     &::before {
-                        display: relative;
+                        
                         content: '\u25B7';
                         top: -0.1em;
                         font-size: 13px;
@@ -202,6 +202,8 @@
 
                 &::-webkit-slider-runnable-track {
                     background-color: transparent;
+                    padding-left:2px;
+                    padding-right:2px;
                 }
             }
 
